--- a/vue/sales/index.html
+++ b/vue/sales/index.html
@@ -13,7 +13,36 @@
     <div id="app">
         <div class="container">
             <h1 class="mt-3">{{title}}</h1>
-            <table class="mt-5 table">
+            <!-- Relatório com a somatoria Total de cada produto -->
+            <table class="mt-5 table" v-if="salesByProduct">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Nome</th>
+                        <th>Total</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr v-for="(sale, index) in salesByProduct">
+                        <td>#{{index + 1}}</td>
+                        <td>{{sale.name}}</td>
+                        <td v-money="'R$'">{{sale.value}}</td>
+                    </tr>
+                </tbody>
+
+                <!-- Valor Total -->
+                <tfoot>
+                    <tr>
+                        <td>+</td>
+                        <td>Total</td>
+                        <td v-money="'R$'">{{calculateTotal(salesByProduct)}}</td>
+                    </tr>
+                </tfoot>              
+
+
+            </table>            
+          
+            <!-- <table class="mt-5 table">
                 <thead>
                     <tr>
                         <th>ID</th>
@@ -32,7 +61,7 @@
                         <td>{{sale.date}}</td>
                     </tr>
                 </tbody>
-            </table>
+            </table> -->
         </div>
     </div>
 </body>
